# openmc_depletion_plotter

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/: plot_activity_vs_time.py  plot_isotope_charts.py  plot_multiple_isotope_charts.py  plot_multiple_materials.py  plot_pulse_schedule.py  plot_simple_material.py  plot_single_material.py
examples/activity_atoms_vs_time/: plot_activity_vs_time.py  plot_atoms_vs_time.py  simulate_silver_depletion.py
examples/decay_heat_vs_time/: decay_heat_vs_time.py
examples/isotope_charts/: plot_isotope_charts_fisson_irradiation.py  plot_isotope_charts_fusion_irradiation.py  simulate_fission_actiation.py  simulate_fussion_actiation.py
examples/pulse_schedule/: plot_pulse_schedule.py  simulate_pulsed_irradiation.py
openmc_depletion_plotter/: __init__.py  core.py  integrators.py  materials.py  results.py  utils.py
src/openmc_depletion_plotter/: __init__.py  app.py  integrators.py  launch.py  materials.py  results.py  utils.py
tests/: cross_sections.xml  depletion_results.h5  materials.xml  test_plots.py  test_python_api.py  test_utils.py
