[metadata]
name = openmc_depletion_plotter
version = attr: openmc_depletion_plotter.__version__
author = The openmc_depletion_plotter Development Team
author_email = mail@jshimwell.com
description = Plot the isotopes present during depletion steps on an isotope chart.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/openmc_depletion_plotter
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/openmc_depletion_plotter
    Tracker = https://github.com/fusion-energy/openmc_depletion_plotter/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1
    matplotlib
    seaborn
    pint


[options.extras_require]
tests = 
    pytest >= 5.4.3

[flake8]
per-file-ignores = __init__.py:F401
